Fix mobile image alignment on Projects page

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -327,7 +327,7 @@
 @media screen and (max-width: 500px) {
   .portfolios {
     padding-left: 2rem;
-    padding-right: 1rem;
+    padding-right: 2rem;
   }
 }
 
