--- a/styless/styles.css
+++ b/styless/styles.css
@@ -866,7 +866,7 @@ section {
 @media screen and (max-width: 500px) {
   .portfolios {
     padding-left: 2rem;
-    padding-right: 1rem;
+    padding-right: 2rem;
   }
 }
 @media screen and (max-width: 464px) {
